sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:21: error: value debut is not a member of Unit
possible cause: maybe a semicolon is missing before `value debut'?
  }debut=debut+1
   ^