sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var debut=0
  var fin=getNombreValeurs()-2
  var changement=true
  while (changement==true){
    changement=false
    for (compteur<-debut to fin){
      if (plusPetit(compteur+1,compteur)==true){
        echange(compteur+1,compteur)
        changement=true
      }
    }
    fin=fin-1
    for (compteur<- fin to debut by -1){
      if (plusPetit(compteur,compteur-1)==true){
        echange(compteur,compteur-1)
        changement=true
      }
    }
  }debut=debut+1
}